test/expected/explain_xxf_v-c++11.out
explain constexpr void f()
                       ^
24: error: "constexpr void" is illegal until C++14
